src/objects/loan__Search__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Accounting_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Rule</label>
        <referenceTo>loan__Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>loan__Center__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check</label>
        <referenceTo>loan__Check__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Day_Operation__c</fullName>
        <label>Day Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Start of Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Document_Number__c</fullName>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interface_Name__c</fullName>
        <label>Interface Name</label>
        <picklist>
            <picklistValues>
                <fullName>Loan Payment Transaction Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Details Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repayment Schedule Summary Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Loan Payment Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Account Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Rate Schedule Setup Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursal Transaction Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH Return Transaction Interface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interface_batch_size__c</fullName>
        <label>Interface batch size</label>
        <picklist>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Reports</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistical Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodic Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Report__c</fullName>
        <label>Report</label>
        <picklist>
            <controllingField>loan__Report_Type__c</controllingField>
            <picklistValues>
                <fullName>Loan Portfolio Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary of Key Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Product Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ledger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit &amp; Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Savings Product Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACCO Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Aging Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solvency Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rca report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Product</label>
        <referenceTo>loan__Savings_Product__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Source</label>
        <referenceTo>loan__Transaction_Source__c</referenceTo>
        <relationshipLabel>Search</relationshipLabel>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Search</label>
    <nameField>
        <label>Saved Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>